--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.318" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/detailTitle"
         android:layout_width="112dp"
         android:layout_height="28dp"
         android:text="Task Description"
