--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.277" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/titlAdd"
         android:layout_width="228dp"
         android:layout_height="49dp"
         android:ems="10"
@@ -55,13 +55,13 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
+        app:layout_constraintHorizontal_bias="0.193"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.519" />
+        app:layout_constraintVertical_bias="0.422" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/bodyAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -73,7 +73,7 @@
         app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.583" />
+        app:layout_constraintVertical_bias="0.475" />
 
     <Button
         android:id="@+id/addTaskP2"
@@ -88,7 +88,7 @@
         app:layout_constraintVertical_bias="0.734" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/desId"
         android:layout_width="132dp"
         android:layout_height="41dp"
         android:text="Total Tasks : 0"
@@ -98,5 +98,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.885" />
+
+    <TextView
+        android:id="@+id/textaddapp"
+        android:layout_width="91dp"
+        android:layout_height="30dp"
+        android:text="State"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.159"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.564" />
+
+    <EditText
+        android:id="@+id/stateAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="State"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="428dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
