--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -144,7 +144,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Team1"
-            android:onClick="checkButton"
             android:checked="true"
             />
 
@@ -153,7 +152,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Team2"
-            android:onClick="checkButton"
             />
 
         <RadioButton
@@ -161,7 +159,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Team3"
-            android:onClick="checkButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -187,13 +184,13 @@
 
     <Spinner
         android:id="@+id/teamSpinner"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="53dp"
         android:layout_marginTop="20dp"
         android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Teams"
         app:layout_constraintVertical_bias="0.0"
@@ -211,5 +208,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.801" />
+
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="72dp"
+        android:text="upload"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/imgSrc"
+        android:layout_width="151dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="8dp"
+        android:text=""
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/upload"
+        app:layout_constraintTop_toBottomOf="@+id/teamSpinner"
+        app:layout_constraintVertical_bias="0.835" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
